# sprat-cli

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  spratconvert  spratconvert.cpp  spratframes.cpp  spratlayout.cpp  spratpack.cpp  spratprofiles.cfg  spratunpack.cpp  spritelayout.cpp  spritepack.cpp  vcpkg.json
.github/workflows/: ci.yml
README-assets/: layout_desktop.txt  layout_fast.txt  layout_legacy.txt  layout_max_800x600.txt  layout_mobile.txt  layout_padding.txt
build_debug/: spratprofiles.cfg
build_debug/tests/: core_test  layout_test
build_release/tests/: core_test  layout_test
build_test/tests/: core_test  layout_test
build_test/transforms/: aseprite.jsonnet  css.jsonnet  csv.jsonnet  godot.jsonnet  json.jsonnet  json.transform  libgdx.jsonnet  phaser-anims.jsonnet  phaser-array.jsonnet  phaser-hash.jsonnet  plist.jsonnet  sprat.libsonnet  unity.anim.jsonnet  unity.json.jsonnet  unity.meta.jsonnet  xml.jsonnet
man/: sprat-cli.1
scripts/: benchmark-trim.sh  regenerate-readme-assets.sh
src/: spratconvert.cpp  spratframes.cpp  spratlayout.cpp  spratpack.cpp  spratunpack.cpp
src/commands/: entrypoints.h  spratconvert_command.cpp  spratframes_command.cpp  spratlayout_command.cpp  spratpack_command.cpp  spratunpack_command.cpp
src/core/: cli_parse.cpp  cli_parse.h  i18n.cpp  i18n.h  layout_parser.cpp  layout_parser.h  output_pattern.cpp  output_pattern.h
tests/: CMakeLists.txt  background_removal_test.sh  compact_seed_search_regression_test.sh  convert_test.sh  core_test.cpp  edge_cases_test.sh  extract_test.sh  extrude_test.sh  incremental_test.sh  layout_limits_and_multipack_optimize_test.sh  layout_test.cpp  multipack_test.sh  output_pattern_test.sh  pipeline_test.sh  profile_resolution_test.sh  sort_behavior_test.sh  spratunpack_stdin_test.sh  unpack_error_test.sh
tests/manual/: animations.empty.object.json  animations.full.json  animations.with-empty-indexes.json  markers.full.json
transforms/: css.transform  csv.transform  json.transform  xml.transform
